[package]
name = "yolo_kdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
rand_core = {version = "0.6.2"}
getrandom = "0.2.3"
p256 = {version = "0.9.0", features = ["zeroize", "ecdsa", "ecdh", "arithmetic", "pem"]}
base64ct = "1.1.1"
hkdf = "0.11.0"
sha2 = "0.9.5"
serde = {version = "1.0.126", optional = true}
bincode = {version = "1.3.3", optional = true}
serde_bytes = {version = "0.11.5", optional = true}
const-oid = "0.6.2"
sqlx = {version= "0.3.0", default-features = false, features = ["runtime-tokio", "macros","postgres","uuid" ,"chrono"]}
tracing = "*"
serde_json="*"
futures="*"
color-eyre = "*"
eyre = "*"
dotenv="*"
tracing-subscriber = "0.2.0"
config = "0.11.0"
tokio ={version = "0.2.0", features = ["full"]}






[dev-dependencies]
crossbeam-deque = "0.8.1"
crossbeam-epoch = "0.9.5"
criterion = "0.3.5"


[features]
default = ["bytes"]
bytes = ["serde/derive", "serde", "bincode", "serde_bytes"]
wasm = ["getrandom/js"]